Fix: Change alignment of times on joinus page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,7 @@ main {
     }
     #classes {
         margin-top: 20px;
-    justify-content: space-evenly;
+    justify-content:center;
     }
     
 }
